--- a/src/Components/Sass/mainstyle.css
+++ b/src/Components/Sass/mainstyle.css
@@ -33,17 +33,20 @@ ul {
   text-transform: uppercase;
 }
 
-.text-green {
-  color: #55E6A5;
+.font-special-light {
+  color: #EEE5E9;
 }
 
-.bg-green {
-  color: white;
-  background-color: #55E6A5;
+.font-dark {
+  color: #CF5C36;
 }
 
-.bg-navy {
-  background-color: #6d6e6e;
+.bg-light {
+  background-color: #EEE5E9;
+}
+
+.bg-dark {
+  background-color: #CF5C36;
 }
 
 .full-width {
@@ -85,17 +88,20 @@ ul {
   text-transform: uppercase;
 }
 
-.text-green {
-  color: #55E6A5;
+.font-special-light {
+  color: #EEE5E9;
 }
 
-.bg-green {
-  color: white;
-  background-color: #55E6A5;
+.font-dark {
+  color: #CF5C36;
 }
 
-.bg-navy {
-  background-color: #6d6e6e;
+.bg-light {
+  background-color: #EEE5E9;
+}
+
+.bg-dark {
+  background-color: #CF5C36;
 }
 
 .full-width {
@@ -103,20 +109,56 @@ ul {
 }
 
 .projects-list {
+  cursor: pointer;
   padding-left: 30px;
+  margin-left: 40px;
+}
+.projects-list li {
+  padding-left: 35px;
+  margin-bottom: 35px;
 }
 
 .project-link {
-  text-decoration: none;
-  font-size: 18px;
-  font-weight: bold;
-  color: #ffffff;
-  transition: all 0.3s ease;
+  display: block;
   position: relative;
+  font-size: 18px;
+  padding: 10px;
+  width: 250px;
+  margin: 0px 15px 10px 0px;
+  color: #EFC88B;
+  background: #CF5C36;
+  text-decoration: none;
+  transition: all 0.3s ease;
+  transform-style: preserve-3d;
+  transform: rotateX(45deg);
+  transform: perspective(877px) rotateX(10deg) skew(-1deg) translate(0, 0);
+  box-shadow: -24px 20px 14px #CF5C36;
+  transition: all 0.5s ease-in-out;
 }
-
+.project-link::before {
+  content: "";
+  position: absolute;
+  width: 20px;
+  height: 100%;
+  left: -20px;
+  top: 10px;
+  background: #EEE5E9;
+  transform: rotate(0deg) skewY(-45deg);
+}
+.project-link::after {
+  content: "";
+  position: absolute;
+  bottom: -12px;
+  left: -6px;
+  height: 12px;
+  width: 100%;
+  transform: rotate(0deg) skewX(-45deg);
+  background: #EFC88B;
+}
 .project-link:hover {
-  color: #b7b6b6;
+  transform: perspective(1000px) skew(25deg) translate(20px, -20px);
+  box-shadow: -50px 50px 30px #CF5C36;
+  color: #EEE5E9;
 }
 
 .project-link::before {
@@ -126,7 +168,7 @@ ul {
   height: 2px;
   bottom: 0;
   left: 0;
-  background-color: #55E6A5;
+  background-color: #EEE5E9;
   visibility: hidden;
   transform: scaleX(0);
   transition: all 0.3s ease-in-out 0s;
@@ -141,13 +183,55 @@ ul {
   background-color: #2980b9;
 }
 
+.skills-data {
+  position: relative;
+}
+.skills-data .data-wrapper {
+  position: relative;
+  z-index: 2;
+  overflow: hidden;
+  transition: transform 0.5s ease;
+  transform-origin: 100% 50%;
+}
+.skills-data .skills-row {
+  padding: 20px;
+}
+.skills-data .left-divider::before,
+.skills-data .right-divider::before,
+.skills-data .left-divider::after,
+.skills-data .right-divider::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: 50%;
+  left: 50%;
+  width: 10px;
+  background-color: #ccc;
+  transform: translateX(-50%);
+  z-index: 1;
+  transition: all 1.5s ease;
+}
+.skills-data .skill-section {
+  position: relative;
+}
+.skills-data .left-divider {
+  position: absolute;
+  transform: perspective(1000px) rotateY(1deg);
+}
+
+@media screen and (min-width: 880px) {
+  .name-header {
+    font-size: 26px;
+  }
+}
 .layout-container {
   padding: 0 !important;
 }
 
 .nav-sidebar {
   color: white !important;
-  background: #6d6e6e !important;
+  background: #CF5C36 !important;
   width: 230px;
 }
 .nav-sidebar .navbar-brand {
@@ -178,19 +262,19 @@ ul {
   font-size: 25px;
   padding: 7px 10px;
   margin-right: 10px;
-  color: white;
-  background-color: #bcb9b9;
+  color: #CF5C36;
+  background-color: #EEE5E9;
   border-top-left-radius: 5px;
   border-bottom-left-radius: 5px;
 }
 .nav-list-item:hover {
-  border-color: #55E6A5;
+  border-color: #EEE5E9;
 }
 .nav-list-item:hover .nav-name {
-  color: #55E6A5 !important;
+  color: #EEE5E9 !important;
 }
 .nav-list-item:hover span {
-  background-color: #55E6A5 !important;
+  background-color: #EEE5E9 !important;
 }
 
 .content-wrapper {
@@ -199,7 +283,7 @@ ul {
   margin: 0;
   padding-top: 50px;
   color: rgb(0, 0, 0);
-  background-color: rgba(226, 227, 228, 0.8196078431);
+  background-color: #EEE5E9;
 }
 
 .homepage-wrapper {
@@ -210,12 +294,40 @@ ul {
   height: 400px;
 }
 
-.about-section-details .about-img {
-  width: 80px;
-  height: 80px;
-  display: inline-block;
+.download-cv {
+  outline: none;
+  border: none;
+  color: white;
+  background: #CF5C36;
+  padding: 10px 24px;
+  border-top-left-radius: 56px;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 56px;
+  border-top-right-radius: 10px;
 }
-.about-section-details h3 {
+
+@keyframes changeWord {
+  0% {
+    opacity: 1;
+    transform: translateY(50%);
+  }
+  100% {
+    opacity: 0;
+    transform: translateY(0%);
+  }
+}
+.word-transition {
+  animation: changeWord 3s ease-in-out infinite forwards;
+}
+
+.about-section-details .about-icon {
+  font-size: 30px;
+  color: #EEE5E9;
+  background: #CF5C36;
+  padding: 2px 8px;
+  border-radius: 8px;
+}
+.about-section-details .about-me-header {
   display: inline-block;
   margin-left: 15px;
 }
@@ -254,8 +366,8 @@ ul {
   top: -80px;
   right: -95px;
   filter: invert(1);
-  z-index: -1;
-  animation: aboutMini linear 2s infinite alternate;
+  animation: aboutMini linear 900ms infinite alternate;
+  color: #CF5C36;
 }
 
 .experience {
@@ -266,13 +378,110 @@ ul {
   right: 79px;
   bottom: -25px;
   text-align: center;
+  background: #CF5C36;
 }
 .experience .exp-icon {
   font-size: 30px;
   position: absolute;
   left: 70px;
   top: 7px;
-  background: white;
-  color: green;
+  background: rgba(239, 200, 139, 0.3411764706);
+  color: #EEE5E9;
   padding: 0px 6px;
+}
+
+.footer_wrapper {
+  color: white;
+  background-color: black;
+  padding: 60px 0;
+}
+.footer_wrapper a {
+  color: white;
+  text-decoration: none;
+}
+.footer_wrapper .footer-header {
+  color: #EFC88B;
+}
+.footer_wrapper .footer_list {
+  font-size: 40px;
+  gap: 20px;
+}
+
+.contact_form {
+  text-align: center;
+  margin-top: 20px;
+  border: none;
+}
+.contact_form fieldset {
+  border: 2px solid #CF5C36;
+  padding: 20px;
+  border-radius: 10px;
+}
+.contact_form fieldset legend {
+  font-size: 24px;
+  font-weight: bold;
+  color: #DEB786;
+  margin-bottom: 20px;
+}
+.contact_form fieldset .input-group {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 15px;
+}
+.contact_form fieldset .input-group div {
+  flex: 0 0 48%;
+  text-align: left;
+}
+.contact_form fieldset .input-group div label {
+  display: block;
+  font-weight: bold;
+  margin-bottom: 5px;
+}
+.contact_form fieldset .input-group div input,
+.contact_form fieldset .input-group div textarea {
+  width: 100%;
+  padding: 8px;
+  margin-bottom: 10px;
+  border: 1px solid #CF5C36;
+  border-radius: 5px;
+  box-sizing: border-box;
+  outline: none;
+}
+.contact_form fieldset .input-group div button {
+  background-color: #CF5C36;
+  color: #fff;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 16px;
+  transition: background-color 0.3s;
+}
+.contact_form fieldset .input-group div button:hover {
+  background-color: #9b885e;
+}
+.contact_form fieldset .message-label {
+  font-weight: 800 !important;
+}
+.contact_form fieldset .form_message {
+  width: 100%;
+  height: 100px;
+  padding: 8px;
+  border: 1px solid #CF5C36;
+  border-radius: 5px;
+  box-sizing: border-box;
+  outline: none;
+}
+.contact_form button {
+  background-color: #CF5C36;
+  color: #fff;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 16px;
+  transition: background-color 0.3s;
+}
+.contact_form button:hover {
+  background-color: #9b885e;
 }/*# sourceMappingURL=mainstyle.css.map */
