--- a/src/Components/Sass/mainstyle.css
+++ b/src/Components/Sass/mainstyle.css
@@ -45,7 +45,7 @@ ul {
   background-color: #EEE5E9;
 }
 
-.bg-dark {
+.bg-orange {
   background-color: #CF5C36;
 }
 
@@ -100,7 +100,7 @@ ul {
   background-color: #EEE5E9;
 }
 
-.bg-dark {
+.bg-orange {
   background-color: #CF5C36;
 }
 
@@ -183,8 +183,15 @@ ul {
   background-color: #2980b9;
 }
 
+.data-divider {
+  height: 100%;
+  width: 1px; /* Set the desired width of the divider */
+  background-color: #ccc; /* Set the desired color of the divider */
+}
+
 .skills-data {
   position: relative;
+  text-align: center;
 }
 .skills-data .data-wrapper {
   position: relative;
@@ -192,37 +199,204 @@ ul {
   overflow: hidden;
   transition: transform 0.5s ease;
   transform-origin: 100% 50%;
+  -webkit-clip-path: polygon(50% 0%, 100% 25%, 100% 75%, 50% 100%, 0% 75%, 0% 25%);
+          clip-path: polygon(50% 0%, 100% 25%, 100% 75%, 50% 100%, 0% 75%, 0% 25%);
+  background-color: rgba(255, 255, 255, 0.457);
 }
 .skills-data .skills-row {
   padding: 20px;
 }
-.skills-data .left-divider::before,
-.skills-data .right-divider::before,
-.skills-data .left-divider::after,
-.skills-data .right-divider::after {
-  content: "";
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  right: 50%;
-  left: 50%;
-  width: 10px;
-  background-color: #ccc;
-  transform: translateX(-50%);
-  z-index: 1;
-  transition: all 1.5s ease;
+.skills-data .left-divider,
+.skills-data .right-divider {
+  -webkit-clip-path: polygon(50% 0%, 100% 25%, 100% 75%, 50% 100%, 0% 75%, 0% 25%);
+          clip-path: polygon(50% 0%, 100% 25%, 100% 75%, 50% 100%, 0% 75%, 0% 25%);
 }
 .skills-data .skill-section {
   position: relative;
 }
-.skills-data .left-divider {
-  position: absolute;
-  transform: perspective(1000px) rotateY(1deg);
+
+.left-column {
+  animation: openFlapLeft 4s linear forwards;
 }
 
-@media screen and (min-width: 880px) {
+@keyframes openFlapLeft {
+  0% {
+    transform: perspective(168px) rotateY(270deg);
+  }
+  100% {
+    transform: rotateY(360deg);
+  }
+}
+.right-column {
+  animation: openFlapRight 4s linear forwards;
+}
+
+@keyframes openFlapRight {
+  0% {
+    transform: perspective(500px) rotateY(90deg) translateX(-20%);
+    transform-origin: 0% 50%;
+  }
+  100% {
+    transform: rotateY(0deg);
+  }
+}
+.divider {
+  width: 0.5% !important;
+}
+.divider::before {
+  content: "";
+  position: absolute;
+  width: 6px !important;
+  top: 0;
+  left: 50%;
+  background-color: gray;
+  height: 100%;
+  transform: translateX(-50%);
+}
+
+@media only screen and (min-width: 420px) and (max-width: 567px) {
+  .nav-sidebar {
+    width: 180px !important;
+  }
+  .nav-sidebar .navbar-brand {
+    margin-top: 0px;
+    font-size: 22px !important;
+  }
+  .nav-list-item {
+    padding: 6px 20px !important;
+    margin-bottom: 20px;
+  }
+  .nav-list-item span {
+    font-size: 18px !important;
+    padding: 5px 10px !important;
+  }
   .name-header {
-    font-size: 26px;
+    font-size: 16px !important;
+  }
+  .home-text {
+    font-size: 14px;
+    padding-inline: 0 35px;
+  }
+  .download-cv {
+    padding: 6px 18px;
+    margin-bottom: 10px;
+  }
+  .footer_wrapper {
+    text-align: center;
+  }
+  .footer_wrapper p, .footer_wrapper a {
+    font-size: 14px !important;
+  }
+  .footer_wrapper .footer-header {
+    font-size: 18px !important;
+  }
+  .footer_wrapper .footer_list {
+    justify-content: center;
+  }
+  .footer_wrapper .footer-icon {
+    font-size: 32px !important;
+  }
+}
+/* Small Devices, Tablets */
+@media only screen and (min-width: 577px) and (max-width: 767px) {
+  .name-header {
+    font-size: 20px;
+  }
+  .home-text {
+    font-size: 14px;
+    padding: 10px 4px;
+    padding-inline: 0 74px;
+  }
+  .download-cv {
+    padding: 6px 18px;
+    margin-bottom: 10px;
+  }
+}
+/* Medium Devices, Desktops */
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+  .name-header {
+    font-size: 23px;
+  }
+  .home-text {
+    font-size: 14px;
+    padding-inline: 0 10px;
+  }
+  .download-cv {
+    padding: 6px 18px;
+    margin-bottom: 10px;
+  }
+  .about-header {
+    font-size: 28px;
+  }
+  .about-icon {
+    font-size: 24px !important;
+  }
+  .about-me-header {
+    font-size: 20px !important;
+  }
+  .about-image-section::before {
+    display: none;
+  }
+  .my-img {
+    width: 80%;
+  }
+  .experience {
+    padding: 11px 6px !important;
+    width: 300px !important;
+    right: 34px !important;
+    bottom: -16px !important;
+  }
+  .experience .exp-icon {
+    font-size: 22px !important;
+    left: 35px !important;
+    top: 8px !important;
+  }
+  .experience .experience-years {
+    font-size: 20px;
+  }
+}
+/* Large Devices, Wide Screens */
+@media only screen and (min-width: 992px) and (max-width: 1199px) {
+  .about-image-section .about-icon {
+    font-size: 30px;
+    padding: 2px 8px;
+  }
+  .about-image-section .about-me-header {
+    font-size: 20px !important;
+  }
+  .about-image-section::before {
+    display: none;
+  }
+  .about-image-section::before {
+    top: -150px;
+    right: 0px;
+    width: 200px !important;
+    height: 200px !important;
+  }
+  .experience {
+    position: absolute;
+    padding: 20px 10px;
+    width: 360px;
+    border-radius: 6px;
+    right: 79px;
+    bottom: -25px;
+    text-align: center;
+    background: #CF5C36;
+  }
+  .experience .exp-icon {
+    font-size: 30px;
+    position: absolute;
+    left: 70px;
+    top: 7px;
+    background: rgba(239, 200, 139, 0.3411764706);
+    color: #EEE5E9;
+    padding: 0px 6px;
+  }
+}
+@media only screen and (min-width: 1201px) and (max-width: 1400px) {
+  .about-image-section::before {
+    top: -150px;
+    right: 0px;
   }
 }
 .layout-container {
@@ -363,8 +537,6 @@ ul {
   background-size: cover;
   width: 250px;
   height: 250px;
-  top: -80px;
-  right: -95px;
   filter: invert(1);
   animation: aboutMini linear 900ms infinite alternate;
   color: #CF5C36;
