--- a/src/Components/Sass/project.css
+++ b/src/Components/Sass/project.css
@@ -45,7 +45,7 @@ ul {
   background-color: #EEE5E9;
 }
 
-.bg-dark {
+.bg-orange {
   background-color: #CF5C36;
 }
 
@@ -57,6 +57,7 @@ ul {
   cursor: pointer;
   padding-left: 30px;
   margin-left: 40px;
+  width: 350px;
 }
 .projects-list li {
   padding-left: 35px;
@@ -68,7 +69,7 @@ ul {
   position: relative;
   font-size: 18px;
   padding: 10px;
-  width: 250px;
+  width: 100%;
   margin: 0px 15px 10px 0px;
   color: #EFC88B;
   background: #CF5C36;
