--- a/src/Components/Sass/responsive.scss
+++ b/src/Components/Sass/responsive.scss
@@ -1,5 +1,340 @@
-@media screen and (min-width:880px){
-    .name-header{
-        font-size:26px;
+@media only screen and (max-width: 464px){
+    .nav-sidebar{
+        width: 180px !important;
+    
+        & .navbar-brand{
+            margin-top: 0px;
+            font-size: 18px !important;
+        }
+    }
+    .nav-list-item{
+        padding: 4px 16px !important; 
+        margin-bottom: 20px ;
+
+        span{
+            font-size: 18px !important;
+            padding: 3px 10px !important;
+        }
+    }
+    .projects-list {
+        width: 200px !important;
+        padding-left: 12px;
+        margin-left: 2px;
+        .project-link{
+            font-size: 12px;
+        }
+    }
+    .skills-data{
+        .skills-head{
+            font-size: 13px;
+        }
+        .skills-row{
+            padding: 10px 0px;
+            margin-top: 44px;
+            margin-bottom: 32px;
+        }
+        .skills-list{
+            font-size: 12px !important;
+        }
     }
 }
+
+@media only screen and (min-width: 465px) and (max-width: 576px){
+    .nav-sidebar{
+        width: 180px !important;
+    
+        & .navbar-brand{
+            margin-top: 0px;
+            font-size: 22px !important;
+        }
+    }
+    .nav-list-item{
+        padding: 6px 20px !important; 
+        margin-bottom: 20px ;
+
+        span{
+            font-size: 18px !important;
+            padding: 5px 10px !important;
+        }
+    }
+    .name-header{
+        font-size:16px !important;
+    }
+    .home-text{
+        font-size: 14px;
+        padding-inline: 0 35px ;
+    }
+    .download-cv{
+        padding: 6px 18px ;
+        margin-bottom: 10px;
+    }
+    .footer_wrapper{
+        text-align: center;
+
+        & p,a{
+            font-size: 12px !important;
+        }
+        .footer-header{
+            font-size: 16px !important;
+        }
+        .footer_list {
+            justify-content: center;
+        }
+        .footer-icon{
+            font-size: 28px !important;
+        }
+    }
+    .projects-list {
+        width: 250px !important;
+        padding-left: 18px;
+        margin-left: 5px;
+        .project-link{
+            font-size: 13px;
+        }
+    }
+    .my-img{
+        width: 65%;
+    }
+    .about-image-section::before{
+        top: -30px;
+        right: 45px;
+        width: 140px !important;
+        height: 140px !important;
+    }
+    .experience {
+        padding: 11px 6px !important;
+        width: 210px !important;
+        right: 50px !important;
+        bottom: -16px !important;
+
+        .exp-icon{
+            font-size: 16px !important;
+            left: 30px !important;
+            top: 5px !important;
+        }
+        .experience-years{
+            font-size: 14px !important;
+        }
+    }
+    .skills-data{
+        .skills-head{
+            font-size: 13px;
+        }
+        .skills-row{
+            padding: 10px 0px;
+            margin-top: 44px;
+            margin-bottom: 32px;
+        }
+        .skills-list{
+            font-size: 12px !important;
+        }
+    }
+}
+
+/* Small Devices, Tablets */
+@media only screen and (min-width: 577px) and (max-width: 767px){
+    .nav-sidebar{
+        width: 200px !important;
+    
+        & .navbar-brand{
+            margin-top: 0px;
+            font-size: 22px !important;
+        }
+    }
+    .nav-list-item{
+        padding: 8px 20px !important; 
+        margin-bottom: 20px ;
+
+        span{
+            font-size: 18px !important;
+            padding: 7px 10px !important;
+        }
+    }
+    .name-header{
+        font-size:20px;
+    }
+    .home-text{
+        font-size: 14px;
+        padding: 10px 4px;
+        padding-inline: 0 74px;
+    }
+    .download-cv{
+        padding: 6px 18px;
+        margin-bottom: 10px;
+    }
+    .projects-list {
+        width: 300px !important;
+        .project-link{
+            font-size: 20px;
+        }
+    }
+    .about-section-details{
+        .about-des{
+            font-size: 15px ;
+            padding-inline: 0 80px;
+        }
+        .about-icon{
+                font-size: 24px !important;
+        }
+        .about-me-header{
+            font-size: 16px !important;
+        }
+    }
+    .about-header{
+        font-size: 28px !important;
+    }
+    .about-section-details::before{
+        display: none !important;
+    }
+    .my-img{
+        width: 75%;
+    }
+    .about-image-section::before{
+        top: -30px;
+        right: 45px;
+        width: 160px !important;
+        height: 160px !important;
+    }
+    .experience {
+        padding: 11px 6px !important;
+        width: 270px !important;
+        right: 50px !important;
+        bottom: -16px !important;
+
+        .exp-icon{
+            font-size: 20px !important;
+            left: 44px !important;
+            top: 5px !important;
+        }
+        .experience-years{
+            font-size: 17px !important;
+        }
+    }
+    .skills-data{
+        .skills-head{
+            font-size: 15px;
+        }
+        .skills-row{
+            padding: 10px 0px;
+            margin-top: 44px;
+            margin-bottom: 32px;
+        }
+        .skills-list{
+            font-size: 14px !important;
+        }
+    }
+}
+
+/* Medium Devices, Desktops */
+@media only screen and (min-width: 768px) and (max-width: 991px){
+    .name-header{
+        font-size:23px;
+    }
+    .home-text{
+        font-size: 14px;
+        padding-inline: 0 10px;
+    }
+    .download-cv{
+        padding: 6px 18px;
+        margin-bottom: 10px;
+    }
+    .about-section-details{
+        
+        .about-des{
+            font-size: 18px;
+            padding-inline: 0 80px;
+        }
+        .about-icon{
+                font-size: 24px !important;
+        }
+        .about-me-header{
+            font-size: 20px !important;
+        } 
+    }
+    .my-img{
+        width: 80%;
+    }
+    .experience {
+        padding: 11px 6px !important;
+        width: 300px !important;
+        right: 34px !important;
+        bottom: -16px !important;
+
+        .exp-icon{
+            font-size: 22px !important;
+            left: 54px !important;
+            top: 5px !important;
+        }
+        .experience-years{
+            font-size: 20px;
+        }
+    }
+
+    .footer_wrapper{
+        text-align: center;
+
+        & p,a{
+            font-size: 16px ;
+        }
+        .footer-header{
+            font-size: 20px ;
+        }
+        .footer_list {
+            justify-content: center;
+        }
+        .footer-icon{
+            font-size: 32px ;
+        }
+    }
+    .about-image-section::before{
+        top: -30px;
+        right: 45px;
+        width: 180px !important;
+        height: 180px !important;
+    }
+    .skills-data{
+        .skills-head{
+            font-size: 17px;
+        }
+        .skills-list{
+            font-size: 16px;
+        }
+    }
+    
+}
+/* Large Devices, Wide Screens */
+@media only screen and (min-width: 992px) and (max-width: 1199px) {
+    .about-image-section {
+        .about-icon{
+            font-size: 30px;
+            padding: 2px 8px;
+        }
+        .about-me-header{
+            font-size: 20px !important;
+        }
+        &::before{
+            display: none;
+        }
+    }
+    .about-image-section::before{
+        top: -150px ;
+        right: 0px;
+        width: 200px !important;
+        height: 200px !important;
+    }
+    .skills-data{
+        .skills-row{
+            &li{
+                margin-top: 5px;
+            }
+        }
+    }
+    
+  }
+  
+  @media only screen and (min-width: 1201px) and (max-width: 1400px) {
+    .about-image-section::before{
+        top: -150px ;
+        right: 0px;
+    }
+  }
