--- a/src/Components/Sass/skills.css
+++ b/src/Components/Sass/skills.css
@@ -1,6 +1,13 @@
+.data-divider {
+  height: 100%;
+  width: 1px; /* Set the desired width of the divider */
+  background-color: #ccc; /* Set the desired color of the divider */
+}
+
 .skills-data {
   position: relative;
   text-align: center;
+  margin-bottom: 35px;
 }
 .skills-data .data-wrapper {
   position: relative;
@@ -8,26 +15,58 @@
   overflow: hidden;
   transition: transform 0.5s ease;
   transform-origin: 100% 50%;
+  -webkit-clip-path: polygon(50% 0%, 100% 25%, 100% 75%, 50% 100%, 0% 75%, 0% 25%);
+          clip-path: polygon(50% 0%, 100% 25%, 100% 75%, 50% 100%, 0% 75%, 0% 25%);
+  background-color: rgba(255, 255, 255, 0.457);
 }
 .skills-data .skills-row {
-  padding: 20px;
+  padding: 10px;
+  margin-top: 25px;
 }
-.skills-data .left-divider::before,
-.skills-data .right-divider::before,
-.skills-data .left-divider::after,
-.skills-data .right-divider::after {
-  content: "";
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  right: 50%;
-  left: 50%;
-  width: 10px;
-  background-color: #ccc;
-  transform: translateX(-50%);
-  z-index: 1;
-  transition: all 1.5s ease;
+.skills-data .left-divider,
+.skills-data .right-divider {
+  -webkit-clip-path: polygon(50% 0%, 100% 25%, 100% 75%, 50% 100%, 0% 75%, 0% 25%);
+          clip-path: polygon(50% 0%, 100% 25%, 100% 75%, 50% 100%, 0% 75%, 0% 25%);
 }
 .skills-data .skill-section {
   position: relative;
+}
+
+.left-column {
+  animation: openFlapLeft 4s linear forwards;
+}
+
+@keyframes openFlapLeft {
+  0% {
+    transform: perspective(168px) rotateY(270deg);
+  }
+  100% {
+    transform: rotateY(360deg);
+  }
+}
+.right-column {
+  animation: openFlapRight 4s linear forwards;
+}
+
+@keyframes openFlapRight {
+  0% {
+    transform: perspective(500px) rotateY(90deg) translateX(-20%);
+    transform-origin: 0% 50%;
+  }
+  100% {
+    transform: rotateY(0deg);
+  }
+}
+.divider {
+  width: 0.5% !important;
+}
+.divider::before {
+  content: "";
+  position: absolute;
+  width: 6px !important;
+  top: 0;
+  left: 50%;
+  background-color: gray;
+  height: 100%;
+  transform: translateX(-50%);
 }/*# sourceMappingURL=skills.css.map */
